Changelog
=========


1.0.3 (unreleased)
------------------

- Nothing changed yet.


1.0.2 (2016-09-28)
------------------

- Make "add new term permission" configurable + lawgiver support.
  [mathias.leimgruber]


1.0.1 (2016-09-28)
------------------

- Reinitilize select2 if overlay content is replaced.
  [mathias.leimgruber]


1.0.0 (2016-09-28)
------------------

- Init Release
  [mathias.leimgruber]