@@ -46,6 +46,7 @@ setup(
     zip_safe=False,
 
     install_requires=[
+        'ftw.upgrade',
         'setuptools',
         'plone.dexterity',
         'plone.app.dexterity',
